# GrayscaleFilter

./: .gitignore  CMakeLists.txt  Readme.md
include/: LoadPNG.h
lib/: lodepng.c
src/: LoadPNG.c  main.c
